syntax = "proto3";

package bytebase.v1;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/http.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "v1/common.proto";

option go_package = "generated-go/v1";

service AnomalyService {
  rpc SearchAnomalies(SearchAnomaliesRequest) returns (SearchAnomaliesResponse) {
    option (google.api.http) = {get: "/v1/anomalies:search"};
  }
}

message SearchAnomaliesRequest {
  // filter is the filter to apply on the search anomaly request,
  // follow the [ebnf](https://en.wikipedia.org/wiki/Extended_Backus%E2%80%93Naur_form) syntax.
  // Only support filter by resource and type for now.
  // For example:
  // Search the anomalies of a specific resource: 'resource="environments/{environemnt}/instances/{instance}".'
  // Search the specified types of anomalies: 'type="DATABASE_BACKUP_POLICY_VIOLATION" | "MIGRATION_SCHEMA".'
  string filter = 1;

  // Not used. The maximum number of anomalies to return. The service may return fewer than
  // this value.
  // If unspecified, at most 50 anomalies will be returned.
  // The maximum value is 1000; values above 1000 will be coerced to 1000.
  int32 page_size = 2;

  // Not used. A page token, received from a previous `SearchAnomalies` call.
  // Provide this to retrieve the subsequent page.
  //
  // When paginating, all other parameters provided to `SearchAnomalies` must match
  // the call that provided the page token.
  string page_token = 3;
}

message SearchAnomaliesResponse {
  // anomalies is the list of anomalies.
  repeated Anomaly anomalies = 1;

  // Not used. A token, which can be sent as `page_token` to retrieve the next page.
  // If this field is omitted, there are no subsequent pages.
  string next_page_token = 2;
}

message Anomaly {
  // AnomalyType is the type of the anomaly.
  enum AnomalyType {
    // Unspecified anomaly type.
    ANOMALY_TYPE_UNSPECIFIED = 0;
    // Instance level anomaly.
    //
    // INSTANCE_CONNECTION is the anomaly type for instance connection, e.g. the instance is down.
    INSTANCE_CONNECTION = 1;
    // MIGRATION_SCHEMA is the anomaly type for migration schema, e.g. the migration schema in the instance is missing.
    MIGRATION_SCHEMA = 2;

    // Database level anomaly.
    //
    // DATABASE_BACKUP_POLICY_VIOLATION is the anomaly type for database backup policy violation,
    // e.g. the database backup policy is not meet the environment backup policy.
    DATABASE_BACKUP_POLICY_VIOLATION = 3;
    // DATABASE_BACKUP_MISSING is the anomaly type for the backup missing, e.g. the backup is missing.
    DATABASE_BACKUP_MISSING = 4;
    // DATABASE_CONNECTION is the anomaly type for database connection, e.g. the database had been deleted.
    DATABASE_CONNECTION = 5;
    // DATABASE_SCHEMA_DRIFT is the anomaly type for database schema drift,
    // e.g. the database schema had been changed without bytebase migration.
    DATABASE_SCHEMA_DRIFT = 6;
  }

  // AnomalySeverity is the severity of the anomaly.
  enum AnomalySeverity {
    // Unspecified anomaly severity.
    ANOMALY_SEVERITY_UNSPECIFIED = 0;
    // MEDIUM is the info level anomaly severity.
    MEDIUM = 1;
    // HIGH is the warning level anomaly severity.
    HIGH = 2;
    // CRITICAL is the critical level anomaly severity.
    CRITICAL = 3;
  }

  // The resource that is the target of the operation.
  // Format:
  // - Instance: environments/{environment}/instnaces/{instance}
  // - Database: environments/{environment}/instnaces/{instance}/databases/{database}
  string resource = 1 [(google.api.field_behavior) = REQUIRED];

  // type is the type of the anomaly.
  AnomalyType type = 2;

  // severity is the severity of the anomaly.
  AnomalySeverity severity = 3;

  // Instance level anomaly detail.
  //
  // InstanceConnectionDetail is the detail for instance connection anomaly.
  message InstanceConnectionDetail {
    // detail is the detail of the instance connection failure.
    string detail = 1;
  }

  // Database level anomaly detial.
  //
  // DatbaaseConnectionDetail is the detail for database connection anomaly.
  message DatabaseConnectionDetail {
    // detail is the detail of the database connection failure.
    string detail = 1;
  }

  // BackupPlanSchedule is the backup plan schedule.
  enum BackupPlanSchedule {
    // Unspecified backup plan schedule.
    BACKUP_PLAN_SCHEDULE_UNSPECIFIED = 0;
    // UNSET is the unset backup plan schedule.
    UNSET = 1;
    // DAILY is the daily backup plan schedule.
    DAILY = 2;
    // WEEKLY is the weekly backup plan schedule.
    WEEKLY = 3;
  }

  // DatabaseBackupPolicyViolationDetail is the detail for database backup policy violation anomaly.
  message DatabaseBackupPolicyViolationDetail {
    // parent is the parent of the database.
    // Format: environments/{environment}
    string parent = 1;

    // expected_schedule is the expected backup plan schedule in the parent.
    BackupPlanSchedule expected_schedule = 2;

    // actual_schedule is the actual backup plan schedule in the database.
    BackupPlanSchedule actual_schedule = 3;
  }

  // DatabaseBackupMissingDetail is the detail for database backup missing anomaly.
  message DatabaseBackupMissingDetail {
    // expected_schedule is the expected backup plan schedule in the database.
    BackupPlanSchedule expected_schedule = 1;

    // latest_backup_time is the latest backup time in the database.
    google.protobuf.Timestamp latest_backup_time = 2;
  }

  // DatabaseSchemaDriftDetail is the detail for database schema drift anomaly.
  message DatabaseSchemaDriftDetail {
    // record_version is the record version of the database schema drift.
    string record_version = 1;

    // expected_schema is the expected schema in the database.
    string expected_schema = 2;

    // actual_schema is the actual schema in the database.
    string actual_schema = 3;
  }

  // detail is the detail of the anomaly.
  oneof detail {
    InstanceConnectionDetail instance_connection_detail = 4;
    DatabaseConnectionDetail database_connection_detail = 5;
    DatabaseBackupPolicyViolationDetail database_backup_policy_violation_detail = 6;
    DatabaseBackupMissingDetail database_backup_missing_detail = 7;
    DatabaseSchemaDriftDetail database_schema_drift_detail = 8;
  }
}
